# yolo-android-app

./: .gitignore  INSTRUCTION.md  README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/example/yolo_app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/yolo26n_ncnn_model/: metadata.yaml
app/src/main/assets/yolo26n_ncnn_model_int8/: model.ncnn.param
app/src/main/assets/yolo26n_tflite_model/: metadata.yaml
app/src/main/assets/yolo26n_tflite_model_int8/: metadata.yaml  model.tflite
app/src/main/cpp/: CMakeLists.txt  ncnn_yolo_jni.cpp  ncnn_yolo_stub_jni.cpp
app/src/main/java/com/example/yolo_app/: MainActivity.kt
app/src/main/java/com/example/yolo_app/detector/: Detection.kt  LiteRtYoloDetector.kt  NcnnYoloDetector.kt  OnnxYoloDetector.kt  YoloOutputFormat.kt
app/src/main/java/com/example/yolo_app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: colors.xml  themes.xml
app/src/test/java/com/example/yolo_app/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
